# spcc_kickstart

./: ARCHITECTURE.md  Cargo.toml  README.md
.cargo/: config.toml
a1/: Cargo.toml
a1/src/: lib.rs  main.rs
a1/tests/: basic.rs
a2/: Cargo.toml
a2/src/: lib.rs  logic.rs  main.rs
a2/tests/: basic.rs
a3/: Cargo.toml
a3/src/: lib.rs  logic.rs  main.rs
a3/tests/: basic.rs
a4/: Cargo.toml
a4/src/: lib.rs  logic.rs  main.rs
a4/tests/: basic.rs
a5/: Cargo.toml
a5/src/: lib.rs  logic.rs  main.rs
a5/tests/: basic.rs  max_packs.rs
a6/: Cargo.toml
a6/a6_benchgen/: Cargo.toml
a6/a6_benchgen/src/: lib.rs  main.rs
a6/benches/: solve_bad_case.rs
a6/src/: lib.rs  logic.rs  main.rs
a6/src/right_exp_search/: benches.rs  impl_for_slice.rs  mod.rs  tests.rs
a6/tests/: basic.rs
b1/: Cargo.toml
b1/src/: lib.rs  main.rs
b1/tests/: basic.rs
b2/: Cargo.toml
b2/src/: lib.rs  logic.rs  main.rs
b2/tests/: basic.rs
b3/: Cargo.toml
b3/src/: lib.rs  logic.rs  main.rs
b3/tests/: basic.rs
b4/: Cargo.toml
b4/src/: lib.rs  logic.rs  main.rs
b4/tests/: basic.rs
b5/: Cargo.toml
b5/src/: lib.rs  logic.rs  main.rs
b5/tests/: basic.rs
b6/: Cargo.toml
b6/src/: lib.rs  main.rs  min_distance.rs
b6/tests/: basic.rs  min_distance.rs
kickstart_macros/: Cargo.toml
kickstart_macros/src/: lib.rs
read_u32/: Cargo.toml
read_u32/src/: lib.rs
test_run_bin/: Cargo.toml
test_run_bin/src/: lib.rs
