[package]
name = "a5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexical = { version = "6.0", default-features = false, features = [
    "parse-integers",
] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
quickcheck = "1"
