[package]
name = "a6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexical = { version = "6.0", default-features = false, features = [
    "parse-integers",
] }

[dev-dependencies]
assert_cmd = "2.0"
criterion = "0.3"
primal = "0.3"

[[bench]]
name = "solve_bad_case"
harness = false
