[package]
name = "a6"
version = "0.1.0"
authors = ["ivan-shrimp"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Solution for SPCC Kickstart Problem A6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
read_u32 = { path = "../read_u32" }

[dev-dependencies]
assert_cmd = "2.0"
criterion = "0.3"
primal = "0.3"

[[bench]]
name = "solve_bad_case"
harness = false
