[package]
name = "b2"
version = "0.1.0"
authors = ["ivan-shrimp"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Solution for SPCC Kickstart Problem B2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kickstart_macros = { path = "../kickstart_macros" }
