[package]
name = "a6_benchgen"
version = "0.1.0"
authors = ["ivan-shrimp"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Input data generator for SPCC Kickstart Problem A6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primal = "0.3"
rand = "0.8"
anyhow = "1.0"
clap = { version = "3.1.6", features = ["derive"] }
